--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    
+        <!-- Faltou colocar a biblioteca do ml5 -->
+        <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+    
         <title>Aplicativo Web de Filtros</title>
     </head>
     <body>
@@ -18,7 +22,7 @@
             <button onclick="Tirar_foto()" class="btn btn-success">Tirar foto</button>
             <br>
             <br>
-            <canvas id="canvas"></canvas>
+           <!--<canvas id="canvas"></canvas> Comentei o canvas porque ele é criado pelo P5.js e não aqui no HTML--> 
             <br>
             <br>
             <div class="copy_right_footer" class="shadow p-3">Desenvolvido por William.</div>
